terminando o componente de programação

--- a/index.html
+++ b/index.html
@@ -290,9 +290,9 @@
                                 <div class="col-md-12">
                                     <nav>
                                         <div class="nav nav-tabs nav-fill" id="nav-tab" role="tablist">
-                                            <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Project Tab 1</a>
-                                            <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">Project Tab 2</a>
-                                            <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab" aria-controls="nav-contact" aria-selected="false">Project Tab 3</a>
+                                            <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">12/02</a>
+                                            <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">13/02</a>
+                                            <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab" aria-controls="nav-contact" aria-selected="false">14/02</a>
                                         </div>
                                     </nav>
                                     <div class="tab-content" id="nav-tabContent">
@@ -300,16 +300,24 @@
                                             <table class="table" cellspacing="0">
                                                 <tbody>
                                                     <tr>
-                                                        <td><a href="#">8:00</a></td>
-                                                        <td>Doe</td>
+                                                        <td>08:10 - 09:00</td>
+                                                        <td>Apresentação do evento e do PET Comp</td>
                                                     </tr>
                                                     <tr>
-                                                        <td><a href="#">9:00</a></td>
-                                                        <td>Moe</td>
+                                                        <td>09:10 - 10:00</td>
+                                                        <td>Dicas Universitárias</td>
                                                     </tr>
                                                     <tr>
-                                                        <td><a href="#">10:00</a></td>
-                                                        <td>Dooley</td>
+                                                        <td>10:00 - 10:30</td>
+                                                        <td>Apresentação do CA</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>10:30 - 11:30</td>
+                                                        <td>Dinâmica</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>13:00 - 15:00</td>
+                                                        <td>Visita aos laboratórios</td>
                                                     </tr>
                                                 </tbody>
                                             </table>
@@ -318,16 +326,24 @@
                                             <table class="table" cellspacing="0">
                                                 <tbody>
                                                     <tr>
-                                                        <td><a href="#">Workshop tal</a></td>
-                                                        <td>Doe</td>
+                                                        <td>08:20 - 09:00</td>
+                                                        <td>Apresentação da Empresa Júnior CEOS</td>
                                                     </tr>
                                                     <tr>
-                                                        <td><a href="#">Apresentações</a></td>
-                                                        <td>Moe</td>
+                                                        <td>9:10 - 10:00</td>
+                                                        <td>Milícias Digitais e as Redes de Ódio no WhatsApp</td>
                                                     </tr>
                                                     <tr>
-                                                        <td><a href="#">adote</a></td>
-                                                        <td>Dooley</td>
+                                                        <td>10:00 - 10:30</td>
+                                                        <td>	Divisão de Equipes</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>10:30 - 11:30</td>
+                                                        <td>Dinâmica</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>13:00 - 15:00</td>
+                                                        <td>Visita aos Laboratórios</td>
                                                     </tr>
                                                 </tbody>
                                             </table>
@@ -336,16 +352,24 @@
                                             <table class="table" cellspacing="0">
                                                 <tbody>
                                                     <tr>
-                                                        <td><a href="#">Work 1</a></td>
-                                                        <td>Doe</td>
+                                                        <td>8:20 - 9:00</td>
+                                                        <td>Trolley Problem</td>
                                                     </tr>
                                                     <tr>
-                                                        <td><a href="#">Work 2</a></td>
-                                                        <td>Moe</td>
+                                                        <td>9:10 - 10:00</td>
+                                                        <td>Mobills: startup e intra empreendedorismo</td>
                                                     </tr>
                                                     <tr>
-                                                        <td><a href="#">Work 3</a></td>
-                                                        <td>Dooley</td
+                                                        <td>10:00 - 11:30</td>
+                                                        <td>Dinâmica</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>13:00 - 14:00</td>
+                                                        <td>Visita aos Laboratórios</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>14:00 - 16:00</td>
+                                                        <td>Campeonato de Video-games</td>
                                                     </tr>
                                                 </tbody>
                                             </table>
