padronizando os titulos

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <section class="page-section" id="workshop">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">workshops</h2>
+                    <h2 class="section-heading titulo">Workshops</h2>
                 <div class="row justify-content-center">
                     <div class="col-md-6">
                         <h3 class="section-subheading text-muted text-justify">Sabemos que muitos alunos se sentem perdidos no início do curso, por isso, preparamos esses workshops durante a semana para auxiliá-los,no decorrer das suas aulas de programação.</h3>
@@ -222,7 +222,7 @@
         <section class="page-section bg-light" id="organizadores">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Sobre o PET</h2>
+                    <h2 class="section-heading titulo">PET</h2>
                 </div>
                 <div class="row">
                     <div class="col-lg-3">
